--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -1390,8 +1390,8 @@
 									<td style="vertical-align:top; padding: 0 00 0 00">23.</td>
 					        		<td style="vertical-align:top; padding: 0 20 0 10">
 					        			Twelve clay targets (identical in shape) are arranged in four hanging columns, as shown in the figure below. There are four red targets in the first column, three white ones in the second column, two green targets in the third column, and three blue ones in the fourth column. To join her college drill team, Deborah must break all twelve of these targets (using her pistol and only twelve bullets) and in so doing must always break the existing tartget at the bottom of a column. Under these conditions, in how many different orders can Deborah shoot down (and break) the twelve targets?
-					        			<div style="padding:0 0 0 0" align="center">
-					        				<canvas id="C1_p23" data-processing-sources="C1_p23/c1_p23.pde" width="320" height="230"></canvas>
+					        			<div style="paddign:0 0 0 0" align="center">
+					        				<canvas id "C1_p23" data-processing-sources="C1_p23/c1_p23.pde" width="320" height="230"></canvas>
 					        			</div>
 					        		</td>
 					      		</tr>
