--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -130,7 +130,7 @@
 		a{color: white; text-decoration: none; font-size: 13}
 		a:hover{color: lightgrey}
 		
-		a.pset{color: white; text-decoration: none; font-size: 13; font-weight: 500; cursor: default}
+		a.pset{color: white; text-decoration: none; font-size: 14; font-weight: 500; cursor: default}
 		a.pset:hover{color: lightgrey}
 		a.pset1{color: white; text-decoration: none; font-size: 12; font-weight: 500}
 		a.pset1:hover{text-decoration: underline;cursor: default;}
@@ -320,7 +320,7 @@
 							<p style="color:#f2f2f2; font-size:14; padding:50 0 0 40; font-family:'Avenir'; font-weight:500">SOLUTIONS by Luqman Malik</p>
 						</td>
 						<td style="vertical-align:top;
-									width:50%;
+									width:50%; height: 100%;
 									cursor:default;
 									padding:0 0 0 0;">
 							<div style="width:100%; height:20; background:#f2f2f2"></div>
