--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -1161,22 +1161,17 @@
 								</table>
 								<table style="padding: 20 20 0 0">
 									<tr>
-										<td style="vertical-align:top; padding:20 0 0 00">12.</td>
+										<td style="vertical-align:top; padding:21 0 0 00">12.</td>
 										<td style="vertical-align:top; padding:0 0 0 10">
 											<ul style="list-style-type:none; padding:0 0 0 0">
 												<li>
 													$
-													P=\begin{cases}
-														a & c & t & \\
-														a & t & c & \\
-														t & c & a & \\
-													\end{cases}
-													\
-													\begin{array}{lll}
-														c & a & t & \\
-														c & t & a & \\
-														t & a & c & 
-													\end{array}. \ \square
+													\text{P}=
+													\begin{bmatrix}
+														a & c & t & & c & a & t \\
+														a & t & c & & c & t & a \\
+														t & c & a & & t & a & c \\
+													\end{bmatrix}
 													$
 												</li>
 											</u>
