--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -2122,13 +2122,13 @@
 													When repeating is allowed, there are $9\times10^5$ such six&ndash;digit integers. $\square$
 													<ol type="i" style="padding:5 0 5 30">
 														<li>
-															$(9\cdot10\cdot10\cdot10\cdot10\cdot5) \ [n_6=2k] =450,000$
+															$(9\cdot10\cdot10\cdot10\cdot10\cdot5) \ [n_6=2k] =450,000.$
 														</li>
 														<li>
-															$(9\cdot10\cdot10\cdot10\cdot10\cdot2) \ [n_6=5k] =180,000$
+															$(9\cdot10\cdot10\cdot10\cdot10\cdot2) \ [n_6=5k] =180,000.$
 														</li>
 														<li>
-															$(9\cdot10\cdot10\cdot10\cdot10\cdot25) \ [n_6=4k] =225,000$
+															$(9\cdot10\cdot10\cdot10\cdot10\cdot25) \ [n_6=4k] =225,000.$
 														</li>
 													</ol>
 												</li>
