--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -3042,13 +3042,13 @@
 									<tr>
 										<td style="vertical-align:top; padding:0 0 0 00">07.</td>
 										<td style="vertical-align:top; padding:0 0 0 10">
-											A committee of twelve is to be selected from ten men and twelve women. In how many ways can the selecetion be carried out if
+											A committee of twelve is to be selected from ten of type <code>&Gamma;</code> and twelve of type <code>&Sigma;</code>. In how many ways can the selecetion be carried out if
 											<ol type="a" style="margin:5 0 5 0; padding:0 0 0 20">
 												<li>there are no restrictions?</li>
-												<li>there must be six men and six women?</li>
-												<li>there must be an even number of women?</li>
-												<li>there must be more women than men?</li>
-												<li>there must be at least eight men?</li>
+												<li>there must be six <code>&Gamma;</code> and six <code>&Sigma;</code>?</li>
+												<li>there must be an even number of <code>&Sigma;</code>?</li>
+												<li>there must be more <code>&Sigma;</code> than <code>&Gamma;</code>?</li>
+												<li>there must be at least eight <code>&Gamma;</code>?</li>
 											</ol>
 										</td>
 									</tr>
