--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -645,7 +645,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -853,7 +853,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -1043,7 +1043,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -1207,7 +1207,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -1346,7 +1346,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -1509,7 +1509,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -1987,7 +1987,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -2410,7 +2410,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -2843,7 +2843,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -3092,7 +3092,7 @@
 										<td style="vertical-align:top; padding:0 0 0 00">08.</td>
 										<td style="vertical-align:top; padding:0 0 0 10">
 											In how many ways can a gambler draw five cards from a standard deck and get 
-											<ol type="a" style="margin:5 0 5 0; padding:0 0 0 20">
+											<ol type="a" style="margin:5 0 5 20; padding:0 0 0 20">
 												<li>a flush (five cards of the same suit)?</li>
 												<li>four aces?</li> 
 												<li>four of a kind?</li>
